<resources>
    <string name="app_name">memo</string>
    <string name="login_title">登录界面</string>
    <string name="nichen">昵称</string>
    <string name="mima">密码</string>
    <string name="denglu">登录</string>
    <string name="zhuce">注册</string>
    <string name="register_title">注册界面</string>
    <string name="memo_title">备忘录列表</string>
    <string name="tianjia">添加</string>
    <string name="add_memo_title">添加备忘录</string>
    <string name="biaoti">标题</string>
    <string name="neirong">内容</string>
</resources>
