<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
  >

    <TextView
        android:text="@string/login_title"
        style="@style/title_style"/>

    <EditText
        android:id="@+id/et_name"
        android:hint="@string/nichen"
        style="@style/et_style"/>

    <EditText
        android:id="@+id/rt_psd"
        android:hint="@string/mima"
        android:inputType="textPassword"
        style="@style/et_style"/>

    <Button
        android:id="@+id/bt_login"
        android:text="@string/denglu"
        style="@style/bt_style"/>

    <Button
        android:id="@+id/bt_register"
        android:text="@string/zhuce"
        style="@style/bt_style"/>
    <RelativeLayout
        android:layout_marginTop="@dimen/bt_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ProgressBar
            android:id="@+id/pb_pressbar"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

</LinearLayout>
